objects/SA_Audit__OWD_Sharing_Report__c.object
<CustomObject>
    <description>It will Store the OWD Sharing Reports Data for User.</description>
    <fields>
        <fullName>SA_Audit__List_View_JSON__c</fullName>
        <description>This field will store all the Data related to List View.</description>
        <label>List View JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Managed_Package_License_Datails__c</fullName>
        <label>Managed Package License Datails</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__OWD_Data_Field__c</fullName>
        <description>Will Hold the Data Related to OWD.</description>
        <label>OWD Data Field</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Sharing_Rules_Details__c</fullName>
        <label>Sharing Rules Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OWDReport</fullName>
                </value>
                <value>
                    <fullName>ManagedPackaged</fullName>
                </value>
                <value>
                    <fullName>ValidationRules</fullName>
                </value>
                <value>
                    <fullName>AllReports</fullName>
                </value>
                <value>
                    <fullName>ListView</fullName>
                </value>
                <value>
                    <fullName>PermissionSet</fullName>
                </value>
                <value>
                    <fullName>FilteredReport</fullName>
                </value>
                <value>
                    <fullName>ScheduledReports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_Audit__Validation_Rules_JSON__c</fullName>
        <label>Validation Rules JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>OWD Sharing Report</label>
    <listViews>
        <fullName>SA_Audit__All</fullName>
        <columns>NAME</columns>
        <columns>SA_Audit__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OWD Sharing Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>